--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -169,6 +169,11 @@ en:
       edit: "Editing %{model}"
       list: "Listing %{models}"
       show: "Show %{model}"
+  job_failure_notice_mailer:
+    alert:
+      error_backtrace: 'Backtrace'
+      error_summary: 'Error Summary'
+      subject: '[OandaApiRails] Job Failed!'
   number:
     currency:
       format:
