--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -194,6 +194,11 @@ ja:
       edit: "%{model}編集"
       list: "%{models}一覧"
       show: "%{model}閲覧"
+  job_failure_notice_mailer:
+    alert:
+      error_backtrace: 'バックトレース'
+      error_summary: 'エラー概要'
+      subject: '[OandaApiRails] ジョブが失敗しました'
   number:
     currency:
       format:
